--- a/src/scss/components/_store.scss
+++ b/src/scss/components/_store.scss
@@ -1,10 +1,15 @@
 @use "../variables" as *;
+@use "../media" as *;
 
 .store {
   padding-top: 120px;
   padding-bottom: 120px;
 
   &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
   }
 
   &__categories {
@@ -39,18 +44,47 @@
   }
 
   &__cart-button {
+    position: relative;
+    display: block;
+    width: 28px;
+    height: 28px;
+  }
+// на маленьком и большом экране цифра съезжает с центра
+  &__cart-cnt {
+    position: relative;
+    z-index: 2;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1;
+    color: $light;
+  }
+
+  &__cart-icon {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
   }
 
   &__title {
+    font-weight: 700;
+    font-size: 52px;
+    color: $green;
+    margin-bottom: 32px;
   }
 
   &__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 420px);
+    justify-content: center;
+    gap: 20px;
+
+    @include mobile {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__item {
-  }
-
-  &__product {
+    display: flex;
   }
 }
 
