--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @use "components/subscribe";
 @use "components/store";
 @use "components/product";
+@use "components/modal";
 @use "components/footer";
 
 @import "normalize.css";
