--- a/src/scss/components/_store.scss
+++ b/src/scss/components/_store.scss
@@ -10,11 +10,23 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 40px;
+
+    @include mobile {
+      flex-wrap: wrap;
+      justify-content: end;
+      gap: 30px;
+    }
   }
 
   &__categories {
     display: flex;
     gap: 28px;
+    overflow-x: auto;
+
+    @include mobile {
+      flex-grow: 1;
+      gap: 16px;
+    }
   }
 
   &__category-button {
@@ -49,7 +61,7 @@
     width: 28px;
     height: 28px;
   }
-// на маленьком и большом экране цифра съезжает с центра
+
   &__cart-cnt {
     position: relative;
     z-index: 2;
@@ -57,6 +69,10 @@
     font-size: 12px;
     line-height: 1;
     color: $light;
+
+    @include bigscreen {
+      vertical-align: middle;
+    }
   }
 
   &__cart-icon {
@@ -85,6 +101,7 @@
 
   &__item {
     display: flex;
+    justify-self: center;
   }
 }
 
