--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,8 @@
 @use "components/store";
 @use "components/product";
 @use "components/modal";
+@use "components/radio";
+@use "components/order-message";
 @use "components/footer";
 
 @import "normalize.css";
